[package]
name = "wpa-ctrl"
version = "0.4.0"
edition = "2021"
description = "WPA controller interface"
readme = "README.md"
repository = "https://github.com/DoumanAsh/wpa-ctrl"
license = "BSL-1.0"
keywords = ["wpa"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
str-buf = "3"

[dependencies.serde]
version = "1"
features = ["alloc"]
default-features = false
optional = true

[dependencies.serde_derive]
version = "1"
optional = true

[features]
serde = ["dep:serde", "serde_derive", "str-buf/serde"]
